force-app/main/default/objects/SystemMonitor__c/SystemMonitor__c.object-meta.xml
<CustomObject>
    <label>System Monitor</label>
    <nameField>
        <displayFormat>Sys {000000}</displayFormat>
        <label>System Monitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Monitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>