force-app/main/default/objects/SystemMonitor__c/fields/ApexJob__c.field-meta.xml
<CustomField>
    <fullName>ApexJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apex Job</label>
    <referenceTo>ApexJob__c</referenceTo>
    <relationshipLabel>System Monitors</relationshipLabel>
    <relationshipName>System_Monitors</relationshipName>
    <type>Lookup</type>
</CustomField>