force-app/main/default/objects/SystemMonitor__c/fields/ApexJobRun__c.field-meta.xml
<CustomField>
    <fullName>ApexJobRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apex Job Run</label>
    <referenceTo>ApexJobRun__c</referenceTo>
    <relationshipLabel>System Monitors</relationshipLabel>
    <relationshipName>System_Monitors</relationshipName>
    <type>Lookup</type>
</CustomField>