force-app/main/default/objects/SystemMonitor__c/fields/Createddate_Time__c.field-meta.xml
<CustomField>
    <fullName>Createddate_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Createddate Time</label>
    <type>DateTime</type>
</CustomField>