force-app/main/default/objects/SystemMonitor__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>