force-app/main/default/objects/SystemMonitor__c/fields/SlackMessage__c.field-meta.xml
<CustomField>
    <fullName>SlackMessage__c</fullName>
    <formula>&apos;Queueable messages in the last 24 hours: &apos;+ Text(SystemMonitorCount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slack Message</label>
    <type>Text</type>
</CustomField>