force-app/main/default/objects/SystemMonitor__c/fields/SystemMonitorCount__c.field-meta.xml
<CustomField>
    <fullName>SystemMonitorCount__c</fullName>
    <label>System Monitor Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>