force-app/main/default/objects/SystemMonitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Message__c</columns>
    <columns>Object__c</columns>
    <columns>RecordId__c</columns>
    <columns>SystemMonitorCount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>