force-app/main/default/objects/SystemMonitor__c/listViews/Queueable_Jobs.listView-meta.xml
<ListView>
    <fullName>Queueable_Jobs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>SystemMonitorCount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Queueable</value>
    </filters>
    <label>Queueable Jobs</label>
</ListView>