force-app/main/default/objects/SystemMonitor__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Object__c</columns>
    <columns>RecordId__c</columns>
    <columns>Message__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>SystemMonitorCount__c</columns>
    <columns>SlackMessage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>